--- a/alert.html
+++ b/alert.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script>alert("1")</script>
+    <script>
+var OSName = "Unknown OS";
+
+if (navigator.appVersion.indexOf("Win") != -1) {
+  OSName = "Windows";
+} else if (navigator.appVersion.indexOf("Mac") != -1) {
+  OSName = "MacOS";
+} else if (navigator.appVersion.indexOf("X11") != -1) {
+  OSName = "UNIX";
+} else if (navigator.appVersion.indexOf("Linux") != -1) {
+  OSName = "Linux";
+}
+
+alert("Your OS is " + OSName + "\nYour Browser is " + navigator.appName );
+    </script>
 </body>
 </html>
